--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ plugins:
 
 author:
   name: Aidynbek Mussa
-  avatar : "/assets/images/bio-photo.JPG"
+  avatar : "/assets/images/bio-photo.jpg"
   bio: Data analyst and economist passionate about turning analytics into action.
   email: aidynbek.mussa@columbia.edu
   github: aidynbekmussa2000
