Update Email caption

--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ author:
   name: Aidynbek Mussa
   avatar : "/assets/images/bio-photo.jpg"
   bio: Data analyst and economist passionate about turning analytics into action.
-  email: aidynbek.mussa@columbia.edu
+  aidynbek.mussa@columbia.edu: aidynbek.mussa@columbia.edu
   github: aidynbekmussa2000
   linkedin: aidynbekmussa
   location: New York, NY
