--- a/_config.yml
+++ b/_config.yml
@@ -58,11 +58,24 @@ plugins:
 author:
   name: Aidynbek Mussa
   avatar : "/assets/images/bio-photo.jpg"
-  bio: Data analyst and economist passionate about turning analytics into action.
-  aidynbek.mussa@columbia.edu: aidynbek.mussa@columbia.edu
-  github: aidynbekmussa2000
-  linkedin: aidynbekmussa
+  bio: Data analyst and economist turning analytics into action.
   location: New York, NY
+  links:
+    - label: "Email: aidynbek.mussa@columbia.edu"
+      icon: "fas fa-envelope"
+      url: "mailto:aidynbek.mussa@columbia.edu"
+
+    - label: "Telegram: @aidynthecreator"
+      icon: "fab fa-telegram"
+      url: "https://t.me/aidynthecreator"
+
+    - label: "GitHub"
+      icon: "fab fa-github"
+      url: "https://github.com/aidynbekmussa2000"
+
+    - label: "LinkedIn"
+      icon: "fab fa-linkedin"
+      url: "https://linkedin.com/in/aidynbekmussa"
 
 defaults:
   # _posts
